@@ -1,3 +1,7 @@
+2004-09-06  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST): Add autogen.sh.
+
 2004-08-25  Bruno Haible  <bruno@clisp.org>
 
 	* config/ltmain.sh: Upgrade to libtool-1.5.6.
